Commit com CRUDS finalizados (nao testados)

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SB-1490369\\SQLSENAI;Initial Catalog=dbCareWithLove;Integrated Security=True;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=DESKTOP-KRLKBQU\\SQLEXPRESS;Initial Catalog=dbCareWithLove;Integrated Security=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
